# terrasens

./: .gitignore  CLA.md  CONTRIBUTORS.md  Cargo.toml  README.md  entanglement.toml
crates/agrorim-accounting/: Cargo.toml
crates/agrorim-accounting/src/: couts.rs  lib.rs
crates/agrorim-auth/: Cargo.toml
crates/agrorim-auth/src/: lib.rs
crates/agrorim-biodiversity/: Cargo.toml
crates/agrorim-biodiversity/src/: lib.rs  service.rs
crates/agrorim-core/: Cargo.toml
crates/agrorim-core/src/: error.rs  geo.rs  lib.rs  traits.rs  types.rs  units.rs
crates/agrorim-crops/: Cargo.toml
crates/agrorim-crops/src/: catalogue.rs  lib.rs  service.rs
crates/agrorim-db/: Cargo.toml
crates/agrorim-db/src/: lib.rs
crates/agrorim-health/: Cargo.toml
crates/agrorim-health/src/: diagnostic.rs  lib.rs  service.rs
crates/agrorim-memory/: Cargo.toml
crates/agrorim-memory/src/: journal.rs  lib.rs  savoirs.rs  service.rs
crates/agrorim-ml/: Cargo.toml
crates/agrorim-ml/src/: engine.rs  error.rs  lib.rs  model.rs  service.rs
crates/agrorim-rules/: Cargo.toml
crates/agrorim-rules/src/: lib.rs
crates/agrorim-sensors/: Cargo.toml
crates/agrorim-sensors/src/: lib.rs  mqtt.rs  registre.rs  service.rs
crates/agrorim-soil/: Cargo.toml
crates/agrorim-soil/src/: analysis.rs  lib.rs  models.rs  service.rs
crates/agrorim-water/: Cargo.toml
crates/agrorim-water/src/: lib.rs  service.rs
crates/agrorim-weather/: Cargo.toml
crates/agrorim-weather/src/: alertes.rs  lib.rs  service.rs
crates/terrasens-accounting/: Cargo.toml
crates/terrasens-accounting/src/: lib.rs  service.rs
crates/terrasens-auth/: Cargo.toml
crates/terrasens-auth/src/: lib.rs
crates/terrasens-biodiversity/: Cargo.toml
crates/terrasens-biodiversity/src/: inventaire.rs  lib.rs
crates/terrasens-core/: Cargo.toml
crates/terrasens-core/src/: error.rs  geo.rs  lib.rs  traits.rs  types.rs
crates/terrasens-crops/: Cargo.toml
crates/terrasens-crops/src/: associations.rs  calendrier.rs  catalogue.rs  lib.rs  rotation.rs  service.rs
crates/terrasens-db/: Cargo.toml
crates/terrasens-db/src/: lib.rs
crates/terrasens-health/: Cargo.toml
crates/terrasens-health/src/: lib.rs
crates/terrasens-memory/: Cargo.toml
crates/terrasens-memory/src/: journal.rs  lib.rs  service.rs
crates/terrasens-rules/: Cargo.toml
crates/terrasens-rules/src/: lib.rs
crates/terrasens-sensors/: Cargo.toml
crates/terrasens-sensors/src/: lib.rs
crates/terrasens-soil/: Cargo.toml
crates/terrasens-soil/src/: analysis.rs  lib.rs  models.rs  service.rs
crates/terrasens-water/: Cargo.toml
crates/terrasens-water/src/: bilan.rs  lib.rs  service.rs
crates/terrasens-weather/: Cargo.toml
crates/terrasens-weather/src/: alertes.rs  lib.rs  previsions.rs  service.rs
src/: main.rs
src-frontend/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
