[package]
name = "terrasens"
version = "0.1.0"
edition = "2024"
description = "IA agronomique souveraine — local-first, zero cloud, zero extraction"
license = "AGPL-3.0-or-later"
authors = ["Olivier Chevalley <info@orimnutrition.com>"]
repository = "https://github.com/orim-association/terrasens"

[workspace]
members = [
    "crates/terrasens-core",
    "crates/terrasens-soil",
    "crates/terrasens-weather",
    "crates/terrasens-crops",
    "crates/terrasens-health",
    "crates/terrasens-water",
    "crates/terrasens-memory",
    "crates/terrasens-accounting",
    "crates/terrasens-biodiversity",
    "crates/terrasens-auth",
    "crates/terrasens-db",
    "crates/terrasens-sensors",
    "crates/terrasens-rules",
]

[dependencies]
terrasens-core = { path = "crates/terrasens-core" }
terrasens-soil = { path = "crates/terrasens-soil" }
terrasens-db = { path = "crates/terrasens-db" }
terrasens-auth = { path = "crates/terrasens-auth" }
terrasens-rules = { path = "crates/terrasens-rules" }
terrasens-crops = { path = "crates/terrasens-crops" }
terrasens-weather = { path = "crates/terrasens-weather" }
terrasens-health = { path = "crates/terrasens-health" }
terrasens-water = { path = "crates/terrasens-water" }
terrasens-memory = { path = "crates/terrasens-memory" }
terrasens-accounting = { path = "crates/terrasens-accounting" }
terrasens-biodiversity = { path = "crates/terrasens-biodiversity" }

# CLI & Runtime
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = "z"      # Optimize for size (embedded RPi)
lto = true           # Link-time optimization
codegen-units = 1    # Maximum optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller binary
