[package]
name = "agrorim"
version = "0.1.0"
edition = "2024"
description = "IA agronomique souveraine — local-first, zero cloud, zero extraction"
license = "AGPL-3.0-or-later"
authors = ["Olivier Chevalley <info@orimnutrition.com>"]
repository = "https://github.com/orim-association/agrorim"

[workspace]
members = [
    "crates/agrorim-core",
    "crates/agrorim-soil",
    "crates/agrorim-weather",
    "crates/agrorim-crops",
    "crates/agrorim-health",
    "crates/agrorim-water",
    "crates/agrorim-memory",
    "crates/agrorim-accounting",
    "crates/agrorim-biodiversity",
    "crates/agrorim-auth",
    "crates/agrorim-db",
    "crates/agrorim-sensors",
    "crates/agrorim-rules",
    "crates/agrorim-ml",
    "src-tauri",
]

[dependencies]
agrorim-core = { path = "crates/agrorim-core" }
agrorim-soil = { path = "crates/agrorim-soil" }
agrorim-db = { path = "crates/agrorim-db" }
agrorim-auth = { path = "crates/agrorim-auth" }
agrorim-rules = { path = "crates/agrorim-rules" }
agrorim-crops = { path = "crates/agrorim-crops" }
agrorim-weather = { path = "crates/agrorim-weather" }
agrorim-health = { path = "crates/agrorim-health" }
agrorim-water = { path = "crates/agrorim-water" }
agrorim-memory = { path = "crates/agrorim-memory" }
agrorim-accounting = { path = "crates/agrorim-accounting" }
agrorim-biodiversity = { path = "crates/agrorim-biodiversity" }
agrorim-ml = { path = "crates/agrorim-ml" }
agrorim-sensors = { path = "crates/agrorim-sensors" }

# CLI & Runtime
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = "z"      # Optimize for size (embedded RPi)
lto = true           # Link-time optimization
codegen-units = 1    # Maximum optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller binary
