[package]
name = "agrorim-auth"
version = "0.1.0"
edition = "2024"
description = "Authentification terrain — 4 couches souveraines"

[dependencies]
agrorim-core = { path = "../agrorim-core" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
argon2 = "0.5"
rand = "0.8"
