[package]
name = "agrorim-ml"
version = "0.1.0"
edition = "2024"
description = "AGRORIM ML edge — Inférence locale ONNX Runtime"
license = "AGPL-3.0-or-later"
authors = ["Olivier Chevalley <info@orimnutrition.com>"]

[dependencies]
agrorim-core = { path = "../agrorim-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
