[package]
name = "agrorim-sensors"
version = "0.1.0"
edition = "2024"
description = "Couche capteurs IoT — MQTT/LoRa AGRORIM"

[dependencies]
agrorim-core = { path = "../agrorim-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
