[package]
name = "terrasens-biodiversity"
version = "0.1.0"
edition = "2024"
description = "Module M8 — Biodiversité et écosystème TERRASENS"

[dependencies]
terrasens-core = { path = "../terrasens-core" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
