[package]
name = "terrasens-core"
version = "0.1.0"
edition = "2024"
description = "Types fondamentaux et traits partagés TERRASENS"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
