[package]
name = "terrasens-crops"
version = "0.1.0"
edition = "2024"
description = "Module M2 — Planification cultures TERRASENS"

[dependencies]
terrasens-core = { path = "../terrasens-core" }
terrasens-rules = { path = "../terrasens-rules" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
