[package]
name = "terrasens-db"
version = "0.1.0"
edition = "2024"
description = "Couche base de données SQLite/SpatiaLite TERRASENS"

[dependencies]
terrasens-core = { path = "../terrasens-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
