[package]
name = "terrasens-soil"
version = "0.1.0"
edition = "2024"
description = "Module M1 — Analyse de sol TERRASENS"

[dependencies]
terrasens-core = { path = "../terrasens-core" }
terrasens-rules = { path = "../terrasens-rules" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
